[tool.poetry]
name = "instagramunfollowers"
version = "0.1.0"
description = ""
authors = ["isakpulkki"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
invoke = "^2.1.2"
instagrapi = "^2.1.3"
pillow = "^11.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
